--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@heroicons/react": "^2.2.0",
     "clsx": "^2.1.1",
     "next": "15.5.4",
+    "postgres": "^3.4.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "use-debounce": "^10.0.6",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
