--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "clsx": "^2.1.1",
-    "next": "15.5.4",
+    "next": "^15.5.9",
     "postgres": "^3.4.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
